clusters/firefly/apps/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress
  namespace: homarr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
    tls:
      - hosts:
          - homarr.sargeant.co
        secretName: homarr-tls
    rules:
      - host: homarr.sargeant.co
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: homarr
                  port:
                    number: 7575
